--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,18 +5,22 @@
 }
 
 .bydn-instagram-post {
-    flex: 0 0 32%;
-    border: 1px solid #ddd;
+    flex: 0 0 49%;
+    #border: 1px solid #ddd;
     margin-bottom: 20px;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    #padding: 10px;
+    #border-radius: 10px;
+    #box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .bydn-instagram-post img {
     width: 100%;
     height: auto;
-    border-radius: 10px;
+    #border-radius: 10px;
+}
+
+.bydn-instagram-post p {
+    margin-top: 5px;
 }
 
 @media only screen and (max-width: 600px) {
